--- a/trunk/Login/Login.csproj
+++ b/trunk/Login/Login.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{18237246-FA82-4C18-9A0E-0E7447C82BD4}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -70,10 +70,12 @@
     <Compile Include="LoginInfo.cs" />
     <Compile Include="LoginMail.cs" />
     <Compile Include="LoginState.cs" />
+    <Compile Include="Ops\OpAdminQuery.cs" />
     <Compile Include="Ops\OpCheckInfo.cs" />
     <Compile Include="Ops\OpLoginExecute.cs" />
     <Compile Include="Ops\OpLoginQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sql\sqlAdminInfo.cs" />
     <Compile Include="Sql\sqlChangePassword.cs" />
     <Compile Include="Sql\sqlCheckInfo.cs" />
     <Compile Include="Sql\sqlFindByAccountId.cs" />
