--- a/StundentInfoManagement/StundentInfoManagement.csproj
+++ b/StundentInfoManagement/StundentInfoManagement.csproj
@@ -109,11 +109,15 @@
     <Compile Include="Ops\OpStudentMngQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\SqlAddDepartmentName.cs" />
+    <Compile Include="Sql\SqlAddWorkUnitName.cs" />
     <Compile Include="Sql\SqlCheckAdmin.cs" />
     <Compile Include="Sql\SqlDeleteDepartmentName.cs" />
+    <Compile Include="Sql\SqlDeleteWorkUnitName.cs" />
     <Compile Include="Sql\SqlSelectAllDepartment.cs" />
     <Compile Include="Sql\SqlSelectAllStudentBasicInfo.cs" />
+    <Compile Include="Sql\SqlSelectAllWorkUnitName.cs" />
     <Compile Include="StudentBasicInfoEx.cs" />
+    <Compile Include="WorkUnitInfoEx.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
