学生信息模块全部完工，增加了学生信息编辑和模糊查询，不容易啊，鼓掌！

--- a/StundentInfoManagement/StundentInfoManagement.csproj
+++ b/StundentInfoManagement/StundentInfoManagement.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Sql\SqlDeleteDepartmentName.cs" />
     <Compile Include="Sql\SqlDeleteStudentInfo.cs" />
     <Compile Include="Sql\SqlDeleteWorkUnitName.cs" />
+    <Compile Include="Sql\SqlInsertVal.cs" />
     <Compile Include="Sql\SqlSelectAllDepartment.cs" />
     <Compile Include="Sql\SqlSelectAllStudentBasicInfo.cs" />
     <Compile Include="Sql\SqlSelectAllWorkUnitName.cs" />
