--- a/StundentInfoManagement/StundentInfoManagement.csproj
+++ b/StundentInfoManagement/StundentInfoManagement.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Sql\SqlSelectAllDepartment.cs" />
     <Compile Include="Sql\SqlSelectAllStudentBasicInfo.cs" />
     <Compile Include="Sql\SqlSelectAllWorkUnitName.cs" />
+    <Compile Include="Sql\SqlSelectStudentAccount.cs" />
     <Compile Include="Sql\SqlStudentInfoQuery.cs" />
     <Compile Include="StudentBasicInfoEx.cs" />
     <Compile Include="WorkUnitInfoEx.cs" />
