--- a/branch/News/News.csproj
+++ b/branch/News/News.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2290975C-C0A3-4F29-AB03-D24EA357562B}</ProjectGuid>
+    <ProjectGuid>{3B5C7179-71C9-4A07-9D2F-AD3B7937E7B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IDepartment</RootNamespace>
-    <AssemblyName>IDepartment</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>SysCom</RootNamespace>
+    <AssemblyName>News</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -33,75 +33,51 @@
   <ItemGroup>
     <Reference Include="ADBS, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\ADBS.dll</HintPath>
+      <HintPath>..\WebSite\Bin\ADBS.dll</HintPath>
     </Reference>
     <Reference Include="AFS, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\AFS.dll</HintPath>
-    </Reference>
-    <Reference Include="AjaxControlToolkit, Version=1.0.10920.32880, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\AjaxControlToolkit.dll</HintPath>
+      <HintPath>..\WebSite\Bin\AFS.dll</HintPath>
     </Reference>
     <Reference Include="ConfigElement, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\ConfigElement.dll</HintPath>
+      <HintPath>..\WebSite\Bin\ConfigElement.dll</HintPath>
     </Reference>
     <Reference Include="Control, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Control.dll</HintPath>
+      <HintPath>..\WebSite\Bin\Control.dll</HintPath>
     </Reference>
     <Reference Include="Core, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Core.dll</HintPath>
-    </Reference>
-    <Reference Include="FredCK.FCKeditorV2, Version=2.6.3.22451, Culture=neutral, PublicKeyToken=4f86767c9b519a06, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\FredCK.FCKeditorV2.dll</HintPath>
+      <HintPath>..\WebSite\Bin\Core.dll</HintPath>
     </Reference>
     <Reference Include="Global, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Global.dll</HintPath>
+      <HintPath>..\WebSite\Bin\Global.dll</HintPath>
     </Reference>
     <Reference Include="Interface, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Interface.dll</HintPath>
-    </Reference>
-    <Reference Include="Interop.Excel, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Interop.Excel.dll</HintPath>
-    </Reference>
-    <Reference Include="NExcel, Version=0.5.0.19524, Culture=neutral, PublicKeyToken=0e3813d1b3c88458">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\NExcel.dll</HintPath>
+      <HintPath>..\WebSite\Bin\Interface.dll</HintPath>
     </Reference>
     <Reference Include="Operation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Operation.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.DataAccess, Version=2.102.2.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Oracle.DataAccess.dll</HintPath>
+      <HintPath>..\WebSite\Bin\Operation.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthItem.cs" />
-    <Compile Include="DepartmentList.cs" />
-    <Compile Include="IGetAuthList.cs" />
+    <Compile Include="Ops\OpsNewsExecute.cs" />
+    <Compile Include="Ops\OpsNewsQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NewsAuthority.cs" />
+    <Compile Include="Sql\sqlCreateNewsAuthority.cs" />
+    <Compile Include="Sql\sqlDeleteNewsAuthority.cs" />
+    <Compile Include="Sql\sqlGetAuthority.cs" />
+    <Compile Include="Sql\sqlGetNewsAthuoutyList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
