--- a/branch/News/News.csproj
+++ b/branch/News/News.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="ADBS, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\WebSite\Bin\ADBS.dll</HintPath>
+      <HintPath>..\TjChemicalWeb\Bin\ADBS.dll</HintPath>
     </Reference>
     <Reference Include="AFS, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -45,7 +45,7 @@
     </Reference>
     <Reference Include="Control, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\WebSite\Bin\Control.dll</HintPath>
+      <HintPath>..\TjChemicalWeb\Bin\Control.dll</HintPath>
     </Reference>
     <Reference Include="Core, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -57,11 +57,11 @@
     </Reference>
     <Reference Include="Interface, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\WebSite\Bin\Interface.dll</HintPath>
+      <HintPath>..\TjChemicalWeb\Bin\Interface.dll</HintPath>
     </Reference>
     <Reference Include="Operation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\WebSite\Bin\Operation.dll</HintPath>
+      <HintPath>..\TjChemicalWeb\Bin\Operation.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
