--- a/branch/IdentifyLibrary/IdentifyLibrary.csproj
+++ b/branch/IdentifyLibrary/IdentifyLibrary.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2290975C-C0A3-4F29-AB03-D24EA357562B}</ProjectGuid>
+    <ProjectGuid>{F472F1F6-702D-4C89-A0E6-E90BE578EC6D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IDepartment</RootNamespace>
-    <AssemblyName>IDepartment</AssemblyName>
+    <RootNamespace>IdentifyLibrary</RootNamespace>
+    <AssemblyName>IdentifyLibrary</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,25 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\AFS.dll</HintPath>
     </Reference>
-    <Reference Include="AjaxControlToolkit, Version=1.0.10920.32880, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\AjaxControlToolkit.dll</HintPath>
-    </Reference>
-    <Reference Include="ConfigElement, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\ConfigElement.dll</HintPath>
-    </Reference>
-    <Reference Include="Control, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Control.dll</HintPath>
-    </Reference>
     <Reference Include="Core, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Core.dll</HintPath>
-    </Reference>
-    <Reference Include="FredCK.FCKeditorV2, Version=2.6.3.22451, Culture=neutral, PublicKeyToken=4f86767c9b519a06, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\FredCK.FCKeditorV2.dll</HintPath>
     </Reference>
     <Reference Include="Global, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -67,27 +51,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Interface.dll</HintPath>
     </Reference>
-    <Reference Include="Interop.Excel, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Interop.Excel.dll</HintPath>
-    </Reference>
-    <Reference Include="NExcel, Version=0.5.0.19524, Culture=neutral, PublicKeyToken=0e3813d1b3c88458">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\NExcel.dll</HintPath>
-    </Reference>
     <Reference Include="Operation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Operation.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.DataAccess, Version=2.102.2.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Oracle.DataAccess.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -98,16 +69,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthItem.cs" />
-    <Compile Include="DepartmentList.cs" />
-    <Compile Include="IGetAuthList.cs" />
+    <Compile Include="BasicInfoEx.cs" />
+    <Compile Include="Identity.cs" />
+    <Compile Include="Ops\OpIdentifyExec.cs" />
+    <Compile Include="Ops\OpIdentifyProducer.cs" />
+    <Compile Include="Ops\OpIdentifyQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IdentifyLibrary\IdentifyLibrary.csproj">
-      <Project>{F472F1F6-702D-4C89-A0E6-E90BE578EC6D}</Project>
-      <Name>IdentifyLibrary</Name>
-    </ProjectReference>
+    <Compile Include="Sql\SqlCheckAdmin.cs" />
+    <Compile Include="Sql\SqlCheckStudent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
