--- a/branch/Application/Application.csproj
+++ b/branch/Application/Application.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{49669F96-A2F7-4E45-8E9F-026EA6181D6D}</ProjectGuid>
+    <ProjectGuid>{A98B9920-42F2-4192-A51D-BBD438BCA288}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StundentInfoManagement</RootNamespace>
-    <AssemblyName>StundentInfoManagement</AssemblyName>
+    <RootNamespace>Application</RootNamespace>
+    <AssemblyName>Application</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,25 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\AFS.dll</HintPath>
     </Reference>
-    <Reference Include="AjaxControlToolkit, Version=1.0.10920.32880, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\AjaxControlToolkit.dll</HintPath>
-    </Reference>
-    <Reference Include="ConfigElement, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\ConfigElement.dll</HintPath>
-    </Reference>
-    <Reference Include="Control, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Control.dll</HintPath>
-    </Reference>
     <Reference Include="Core, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Core.dll</HintPath>
-    </Reference>
-    <Reference Include="FredCK.FCKeditorV2, Version=2.6.3.22451, Culture=neutral, PublicKeyToken=4f86767c9b519a06, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\FredCK.FCKeditorV2.dll</HintPath>
     </Reference>
     <Reference Include="Global, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -67,21 +51,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Interface.dll</HintPath>
     </Reference>
-    <Reference Include="Interop.Excel, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Interop.Excel.dll</HintPath>
-    </Reference>
-    <Reference Include="NExcel, Version=0.5.0.19524, Culture=neutral, PublicKeyToken=0e3813d1b3c88458">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\NExcel.dll</HintPath>
-    </Reference>
     <Reference Include="Operation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\TjChemicalWeb\Bin\Operation.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.DataAccess, Version=2.102.2.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TjChemicalWeb\Bin\Oracle.DataAccess.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -99,50 +71,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AwardPunishment.cs" />
-    <Compile Include="DepartmentInfoEx.cs" />
-    <Compile Include="MngRegister.cs" />
-    <Compile Include="Ops\OpStudentMngExec.cs" />
-    <Compile Include="Ops\OpStudentMngProducer.cs" />
-    <Compile Include="Ops\OpStudentMngQuery.cs" />
+    <Compile Include="ApplicationEx.cs" />
+    <Compile Include="ApplicationRegister.cs" />
+    <Compile Include="Ops\OpApplicationExec.cs" />
+    <Compile Include="Ops\OpApplicationProducer.cs" />
+    <Compile Include="Ops\OpApplicationQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql\SqlAddDepartmentName.cs" />
-    <Compile Include="Sql\SqlAddStraitStudent.cs" />
-    <Compile Include="Sql\SqlAddWorkUnitName.cs" />
-    <Compile Include="Sql\SqlCheckAdmin.cs" />
-    <Compile Include="Sql\SqlDeleteAwardPunishment.cs" />
-    <Compile Include="Sql\SqlDeleteDepartmentName.cs" />
-    <Compile Include="Sql\SqlDeleteStraitStudent.cs" />
-    <Compile Include="Sql\SqlDeleteStudentInfo.cs" />
-    <Compile Include="Sql\SqlDeleteWorkUnitName.cs" />
-    <Compile Include="Sql\SqlInsertVal.cs" />
-    <Compile Include="Sql\SqlSelectAllAwardPunishmentStudent.cs" />
-    <Compile Include="Sql\SqlSelectAllDepartment.cs" />
-    <Compile Include="Sql\SqlSelectAllStraitStudent.cs" />
-    <Compile Include="Sql\SqlSelectAllStudentBasicInfo.cs" />
-    <Compile Include="Sql\SqlSelectAllWorkUnitName.cs" />
-    <Compile Include="Sql\SqlSelectAwardPunishmentByQuery.cs" />
-    <Compile Include="Sql\SqlSelectSingleAwardPunishmentContent.cs" />
-    <Compile Include="Sql\SqlSelectStraitStudentBasicInfo.cs" />
-    <Compile Include="Sql\SqlSelectStraitStudentByQuery.cs" />
-    <Compile Include="Sql\SqlSelectStudentAccount.cs" />
-    <Compile Include="Sql\SqlStudentInfoQuery.cs" />
-    <Compile Include="StraitStudentInfoEx.cs" />
-    <Compile Include="StudentBasicInfoEx.cs" />
-    <Compile Include="WorkUnitInfoEx.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IDepartment\IDepartment.csproj">
       <Project>{2290975C-C0A3-4F29-AB03-D24EA357562B}</Project>
       <Name>IDepartment</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Login\Login.csproj">
-      <Project>{18237246-FA82-4C18-9A0E-0E7447C82BD4}</Project>
-      <Name>Login</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sql\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
